Replace Chatbase widget script with new configuration

--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
   </main>
 
   <!-- Chatbase widget: paste your script here, before </body> -->
-  <script src="https://www.chatbase.co/widget.js"
-          data-agent-id="Yl7P-JRm92JFsjKjOcVXc"
-          defer></script>
+<script>
+  window.chatbaseConfig = { chatbotId: "Yl7P-JRm92JFsjKjOcVXc" };
+</script>
+<script src="https://www.chatbase.co/embed.min.js" id="chatbase-script" defer></script>
+
 </body>
 </html>
