Update Chatbase widget script in index.html

--- a/index.html
+++ b/index.html
@@ -12,11 +12,15 @@
     <p>Test the EduSmartBot on this page.</p>
   </main>
 
-  <!-- Chatbase widget: paste your script here, before </body> -->
+<!-- Chatbase widget: exact working snippet -->
 <script>
   window.chatbaseConfig = { chatbotId: "Yl7P-JRm92JFsjKjOcVXc" };
 </script>
-<script src="https://www.chatbase.co/embed.min.js" id="chatbase-script" defer></script>
-
+<script
+  src="https://www.chatbase.co/embed.min.js"
+  id="chatbase-script"
+  defer
+></script>
 </body>
 </html>
+
