--- a/index.html
+++ b/index.html
@@ -13,14 +13,12 @@
   </main>
 
 <!-- Chatbase widget: exact working snippet -->
+<!-- Chatbase widget: exact working snippet -->
 <script>
-  window.chatbaseConfig = { chatbotId: "Yl7P-JRm92JFsjKjOcVXc" };
+  window.chatbaseConfig = { chatbotId: "Y17P-JRm92JFSkjOcVXc" };
 </script>
-<script
-  src="https://www.chatbase.co/embed.min.js"
-  id="chatbase-script"
-  defer
-></script>
+<script src="https://www.chatbase.co/embed.min.js" id="chatbase-script" defer></script>
+
 </body>
 </html>
 
