--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Virtual School Demo</title>
-  <link rel="stylesheet" href="assets/styles.css">
+  <style>
+    body { font-family: system-ui, Arial, sans-serif; margin: 40px; }
+    main { max-width: 780px; margin: auto; }
+  </style>
+  <!-- If you have a CSS file, keep this; otherwise remove it -->
+  <!-- <link rel="stylesheet" href="assets/styles.css"> -->
 </head>
 <body>
   <main>
@@ -12,13 +17,10 @@
     <p>Test the EduSmartBot on this page.</p>
   </main>
 
-<!-- Chatbase widget: exact working snippet -->
-<!-- Chatbase widget: exact working snippet -->
-<script>
-  window.chatbaseConfig = { chatbotId: "Y17P-JRm92JFSkjOcVXc" };
-</script>
-<script src="https://www.chatbase.co/embed.min.js" id="chatbase-script" defer></script>
-
+  <!-- Chatbase widget: exact working snippet -->
+  <script>
+    window.chatbaseConfig = { chatbotId: "Y17P-JRm92JFSkjOcVXc" };
+  </script>
+  <script src="https://www.chatbase.co/embed.min.js" id="chatbase-script" defer></script>
 </body>
 </html>
-
