Update Chatbase widget configuration in index.html

--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
     <p>Test the EduSmartBot on this page.</p>
   </main>
 
-  <!-- Chatbase widget: exact working snippet -->
-  <script>
-    window.chatbaseConfig = { chatbotId: "Y17P-JRm92JFSkjOcVXc" };
-  </script>
-  <script src="https://www.chatbase.co/embed.min.js" id="chatbase-script" defer></script>
+<!-- Chatbase widget: corrected, no id -->
+<script>
+  window.chatbaseConfig = { chatbotId: "Y17P-JRm92JFSkjOcVXc", domain: "www.chatbase.co" };
+</script>
+<script src="https://www.chatbase.co/embed.min.js" defer></script>
+
 </body>
 </html>
