Update Chatbase widget configuration in index.html

--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
     <p>Test the EduSmartBot on this page.</p>
   </main>
 
-<!-- Chatbase widget: corrected, no id -->
+<!-- Chatbase widget: minimal, correct -->
 <script>
-  window.chatbaseConfig = { chatbotId: "Y17P-JRm92JFSkjOcVXc", domain: "www.chatbase.co" };
+  window.chatbaseConfig = { chatbotId: "Y17P-JRm92JFSkjOcVXc" };
 </script>
 <script src="https://www.chatbase.co/embed.min.js" defer></script>
+
 
 </body>
 </html>
