--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
     <p>Test the EduSmartBot on this page.</p>
   </main>
 
-<!-- Chatbase widget: minimal, correct -->
+<!-- Chatbase widget: final, correct -->
 <script>
-  window.chatbaseConfig = { chatbotId: "Y17P-JRm92JFSkjOcVXc" };
+  window.embeddedChatbotConfig = {
+    chatbotId: "Y17P-JRm92JFSkjOcVXc",
+    domain: "https://www.chatbase.co"
+  };
 </script>
 <script src="https://www.chatbase.co/embed.min.js" defer></script>
-
 
 </body>
 </html>
