--- a/index.html
+++ b/index.html
@@ -19,15 +19,10 @@
 
 <!-- Chatbase widget -->
 <script>
-  window.chatbaseConfig = {
-    chatbotId: "Y17P-JRm92JFSkjOcVXc",
-  };
+  window.chatbaseConfig = { chatbotId: "Y17P-JRm92JFSkjOcVXc" };
 </script>
-<script
-  src="https://www.chatbase.co/embed.min.js"
-  defer
-></script>
 <script src="https://www.chatbase.co/embed.min.js" defer></script>
+
 
 </body>
 </html>
